--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
     <!-- Puzzle 5: Memory Matching -->
     <a-entity id="memoryGame" position="0 0.5 -4" rotation="0 0 0" scale="0.5 0.5 0.5">
-      <a-box position="0 0 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard1"></a-box>
-      <a-box position="0.5 0 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard2"></a-box>
-      <a-box position="0 -0.5 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard3"></a-box>
-      <a-box position="0.5 -0.5 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard4"></a-box>
+      <a-box position="0 0 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard1" data-symbol="circle"></a-box>
+      <a-box position="0.5 0 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard2" data-symbol="square"></a-box>
+      <a-box position="0 -0.5 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard3" data-symbol="square"></a-box>
+      <a-box position="0.5 -0.5 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard4" data-symbol="circle"></a-box>
     </a-entity>
     <a-text value="Memory Game: Find Matching Pairs" position="-0.5 1 -4" color="white"></a-text>
 
