--- a/index.html
+++ b/index.html
@@ -11,62 +11,71 @@
   <a-scene>
     <a-sky color="#000080"></a-sky>  <!-- Dark blue sky -->
 
-    <a-box position="0 1.5 -3" width="4" height="2" depth="1" color="#666666">
+    <!-- Room -->
+    <a-box position="0 1.5 -3" width="4" height="2" depth="1" color="#666666"  material="src: #roomTexture">
       <a-text value="The Lost Laboratory" position="0 0.5 0.5" color="white" align="center"></a-text>
     </a-box> <!-- Room wall with a title -->
 
-    <a-box position="0 1 -4" width="2" height="2" depth="0.1" color="#FF0000" id="lockedDoor">
+    <!-- Locked Door -->
+    <a-box position="0 1 -4" width="2" height="2" depth="0.1" color="#FF0000" id="lockedDoor" material="src: #doorTexture">
       <a-text value="Locked" position="0 0 0.1" color="white" align="center"></a-text>
-    </a-box> <!-- A locked door -->
+      <a-sound src="#unlockSound" autoplay="false" volume="0.8"></a-sound>
+    </a-box> 
 
     <!-- Key (Hidden) -->
-    <a-box position="2 1 -3" width="0.5" height="0.5" depth="0.1" color="#FF0000" id="hiddenKey" visible="false">
+    <a-box position="2 1 -3" width="0.5" height="0.5" depth="0.1" color="#FF0000" id="hiddenKey" visible="false" material="src: #keyTexture">
       <a-text value="Key" position="0 0 0.1" color="white" align="center"></a-text>
     </a-box>
 
     <!-- Puzzle 1: Rotating Cylinder -->
     <a-entity id="rotatingObject" position="0 0.5 -3" rotation="0 0 0">
-      <a-cylinder radius="0.3" height="1" color="#00ff00"></a-cylinder>
+      <a-cylinder radius="0.3" height="1" color="#00ff00" material="src: #cylinderTexture"></a-cylinder>
+      <a-sound src="#rotateSound" autoplay="true" loop="true" volume="0.5"></a-sound>
     </a-entity>
-    <a-box position="1 1 -2" width="0.5" height="0.5" depth="0.2" color="#FF0000" id="button1">
+    <a-box position="1 1 -2" width="0.5" height="0.5" depth="0.2" color="#FF0000" id="button1" material="src: #buttonTexture">
       <a-text value="Press Me" position="0 0 0.1" color="white" align="center"></a-text>
+      <a-sound src="#clickSound" autoplay="false" volume="0.8"></a-sound>
     </a-box> 
 
     <!-- Puzzle 2:  Hidden Lever -->
     <a-entity id="lever" position="1.5 0.5 -3" rotation="0 0 0" scale="1 0.2 0.2">
-      <a-box width="1" depth="0.1" height="0.2" color="#888" position="0 0 0"></a-box>
-      <a-sphere radius="0.1" color="#FF0000" position="0.5 0 0"></a-sphere>
+      <a-box width="1" depth="0.1" height="0.2" color="#888" position="0 0 0" material="src: #leverTexture"></a-box>
+      <a-sphere radius="0.1" color="#FF0000" position="0.5 0 0" material="src: #knobTexture"></a-sphere>
+      <a-sound src="#leverSound" autoplay="false" volume="0.8"></a-sound>
     </a-entity>
-    <a-box position="-1 1 -2" width="0.5" height="0.5" depth="0.2" color="#FF0000" id="button2">
+    <a-box position="-1 1 -2" width="0.5" height="0.5" depth="0.2" color="#FF0000" id="button2" material="src: #buttonTexture">
       <a-text value="Press Me" position="0 0 0.1" color="white" align="center"></a-text>
+      <a-sound src="#clickSound" autoplay="false" volume="0.8"></a-sound>
     </a-box> 
 
     <!-- Puzzle 3:  Color Matching -->
-    <a-box position="-2 1 -2" width="0.5" height="0.5" depth="0.2" color="#FF0000" id="button3">
+    <a-box position="-2 1 -2" width="0.5" height="0.5" depth="0.2" color="#FF0000" id="button3" material="src: #buttonTexture">
       <a-text value="Press Me" position="0 0 0.1" color="white" align="center"></a-text>
+      <a-sound src="#clickSound" autoplay="false" volume="0.8"></a-sound>
     </a-box> 
-    <a-box position="0 0.5 -2" width="1" height="0.5" depth="0.2" color="#0000FF" id="colorTarget"></a-box>
+    <a-box position="0 0.5 -2" width="1" height="0.5" depth="0.2" color="#0000FF" id="colorTarget" material="src: #targetTexture"></a-box>
     <a-entity id="colorMatch" position="-1 0 -3" rotation="0 0 0" scale="0.5 0.5 0.5">
-      <a-sphere radius="0.2" color="#FF0000" id="sphere1"></a-sphere>
-      <a-sphere radius="0.2" color="#00FF00" id="sphere2"></a-sphere>
-      <a-sphere radius="0.2" color="#0000FF" id="sphere3"></a-sphere>
+      <a-sphere radius="0.2" color="#FF0000" id="sphere1" material="src: #sphereTexture"></a-sphere>
+      <a-sphere radius="0.2" color="#00FF00" id="sphere2" material="src: #sphereTexture"></a-sphere>
+      <a-sphere radius="0.2" color="#0000FF" id="sphere3" material="src: #sphereTexture"></a-sphere>
     </a-entity>
 
     <!-- Puzzle 4: Code Lock -->
-    <a-box position="0 0.5 -5" width="1" height="0.5" depth="0.2" color="#888" id="codeLock">
+    <a-box position="0 0.5 -5" width="1" height="0.5" depth="0.2" color="#888" id="codeLock" material="src: #codeLockTexture">
       <a-text value="Enter Code: " position="0 0 0.1" color="white" align="left"></a-text>
       <a-text value="1234" position="0 0 0.3" color="white" align="left" id="codeInput"></a-text> 
     </a-box>
-    <a-box position="0.5 0.2 -5" width="0.3" height="0.2" depth="0.1" color="#FF0000" id="codeButton">
+    <a-box position="0.5 0.2 -5" width="0.3" height="0.2" depth="0.1" color="#FF0000" id="codeButton" material="src: #buttonTexture">
       <a-text value="Enter" position="0 0 0.1" color="white" align="center"></a-text> 
+      <a-sound src="#clickSound" autoplay="false" volume="0.8"></a-sound>
     </a-box>
 
     <!-- Puzzle 5: Memory Matching -->
     <a-entity id="memoryGame" position="0 0.5 -4" rotation="0 0 0" scale="0.5 0.5 0.5">
-      <a-box position="0 0 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard1" data-symbol="circle"></a-box>
-      <a-box position="0.5 0 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard2" data-symbol="square"></a-box>
-      <a-box position="0 -0.5 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard3" data-symbol="square"></a-box>
-      <a-box position="0.5 -0.5 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard4" data-symbol="circle"></a-box>
+      <a-box position="0 0 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard1" data-symbol="circle" material="src: #cardBackTexture"></a-box>
+      <a-box position="0.5 0 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard2" data-symbol="square" material="src: #cardBackTexture"></a-box>
+      <a-box position="0 -0.5 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard3" data-symbol="square" material="src: #cardBackTexture"></a-box>
+      <a-box position="0.5 -0.5 0" width="0.5" height="0.5" depth="0.1" color="#888" id="memoryCard4" data-symbol="circle" material="src: #cardBackTexture"></a-box>
     </a-entity>
     <a-text value="Memory Game: Find Matching Pairs" position="-0.5 1 -4" color="white"></a-text>
 
@@ -84,6 +93,13 @@
 
     <a-directional-light position="1 1 1" color="#fff"></a-directional-light>
     <a-ambient-light color="#444"></a-ambient-light>  <!-- Added ambient light -->
+
+    <!-- Sound Effects -->
+    <a-asset-item id="rotateSound" src="https://www.zedge.net/find/ringtones/machine-turning-sound"></a-asset-item>
+    <a-asset-item id="leverSound" src="https://www.zedge.net/find/ringtones/lever-sound-effect"></a-asset-item>
+    <a-asset-item id="unlockSound" src="https://www.zedge.net/find/ringtones/unlock-sound-effect"></a-asset-item>
+    <a-asset-item id="clickSound" src="https://www.zedge.net/find/ringtones/click-sound-effect"></a-asset-item>
+    <a-asset-item id="doorCreakSound" src="https://www.zedge.net/find/ringtones/door-creak-sound-effect"></a-asset-item>
 
   </a-scene>
 
